2005-07-24  Justin Garcia  <justin.garcia@apple.com>

        Patch by Anders Carlsson <andersca@mac.com>

        Reviewed by hyatt
        
        - <http://bugzilla.opendarwin.org/show_bug.cgi?id=3615> canvas transform matrix does not apply to patterns
        Fill and stroke patterns are created in the respective fill and stroke functions using the current CTM.

        * khtml/ecma/kjs_html.cpp:
        (KJS::KJS::Context2DFunction::call):
        (KJS::Context2D::updateFillImagePattern):
        (KJS::Context2D::updateStrokeImagePattern):
        (KJS::Context2D::putValueProperty):
        (KJS::Context2D::Context2D):
        (KJS::_rh):
        (KJS::ImagePattern::createPattern):
        * khtml/ecma/kjs_html.h:

2005-07-24  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by kevin.

        Fixes make clean problem introduced in xcode2.1 transition

        * Makefile.am:

2005-07-23  Justin Garcia  <justin.garcia@apple.com>

        Adding a manual test for <http://bugzilla.opendarwin.org/show_bug.cgi?id=3862>

        Test cases added:
        * manual-tests/bidi-visible-control-characters.html: Added.

2005-07-22  David Hyatt  <hyatt@apple.com>

	Put back in the <script src="foo"/> self-closing tag quirk in HTML.  Unfortunately
	Dashboard widgets are dependent on this quirk.

        Reviewed by mjs

        * khtml/html/htmltokenizer.cpp:
        (khtml::HTMLTokenizer::parseTag):

2005-07-22  John Sullivan  <sullivan@apple.com>

        Reviewed by Chris Blumenberg.
        
        Test cases added: none, this only affects Safari autocomplete; it doesn't affect any
        web pages.

        - some changes in the direction of weaning all the form-related SPI from NSView

        * kwq/DOMExtensions.h:
        added -[DOMHTMLInputElement isTextField]
        * kwq/DOMHTML.mm:
        (-[DOMHTMLInputElement isTextField]):
        new method that returns YES if this element is one of the types that's represented